<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relAlert"
        android:layout_width="370dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"
        android:background="@color/gray_dark">

        <TextView
            android:id="@+id/zag_al"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_alert"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/zag_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zag_al"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_ed"
            android:textColor="@color/gray_light"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zag_ed"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_login"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp" />

        <GridLayout
            android:id="@+id/gridAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/but"
                android:text="@string/add"
                android:textColor="@color/teal_200"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/but"
                android:text="@string/cancel"
                android:textColor="@color/teal_200"
                android:textSize="14sp" />

        </GridLayout>

    </RelativeLayout>

</RelativeLayout>